--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,13 @@
   </head>
   <body>
     <header class="header">
-        <h1>Welcome to My Portfolio</h1>
+        <h1>Tyler Puou</h1>
         <nav class="navigation">
             <ul id='navigation__links'>
 
             </ul>
         </nav>
+        <img class='prof-pic'src='https://ca.slack-edge.com/T0351JZQ0-U0100EP7V9Q-59db3cee697d-512' />
     </header>
         <div id="main" class="main-content">
             <h1 class='title'>My Projects</h1>
